--- a/src/InnloggingBoundary/Innloggingsside.less
+++ b/src/InnloggingBoundary/Innloggingsside.less
@@ -12,14 +12,19 @@
     }
 
     &__sidetittel {
-        margin: 3rem 0rem 3rem 0rem;
+        margin: 3rem 0rem 2rem 0rem;
         align-content: center;
     }
 
     &__infotekst {
+        text-align: center;
         margin-bottom: 2rem;
         max-width: 40rem;
         margin: 0rem 2rem 0rem 2rem;
+    }
+
+    &__lenke {
+        margin-top: 2rem;
     }
 
     &__koffertikon {
