info boks til Deltaker,AG,NAv uten i print versjon

--- a/src/AvtaleSide/AvtaleSide.less
+++ b/src/AvtaleSide/AvtaleSide.less
@@ -30,6 +30,11 @@
         margin-top: 1rem;
         margin-bottom: 1rem;
     }
+    &__infoboks {
+        @media print {
+            display: none;
+        }
+    }
 }
 
 @media (min-width: @screen-sm-min) {
