--- a/src/komponenter/Veilederpanel/VeilederpanelMedIkon.less
+++ b/src/komponenter/Veilederpanel/VeilederpanelMedIkon.less
@@ -1,6 +1,7 @@
 @import '~nav-frontend-core/less/_variabler';
 
 .veilederpanel-med-ikon {
+    margin-bottom: 1rem;
     .nav-veilederpanel {
         border-color: @navBlaLighten60;
     }
