--- a/src/AvtaleSide/GodkjenningSteg/Oppsummering/instruks/instruks.less
+++ b/src/AvtaleSide/GodkjenningSteg/Oppsummering/instruks/instruks.less
@@ -2,4 +2,14 @@
     &__subheader {
         padding: 0 0 0 1.25rem;
     }
+
+    @media print {
+        display: none;
+    }
+}
+
+.deltakerinstruks {
+    @media print {
+        display: none;
+    }
 }
