--- a/src/AvtaleSide/GodkjenningSteg/Oppsummering/instruks/instruks.less
+++ b/src/AvtaleSide/GodkjenningSteg/Oppsummering/instruks/instruks.less
@@ -2,4 +2,14 @@
     &__subheader {
         padding: 0 0 0 1.25rem;
     }
+    &__instrukslist {
+        margin-top: 1rem;
+        padding-left: 1.25rem;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
+    &__instrukslistsvg {
+        margin-right: 0.75rem;
+    }
 }
