--- a/src/AvtaleSide/AvtaleOversikt.less
+++ b/src/AvtaleSide/AvtaleOversikt.less
@@ -99,7 +99,7 @@
 
         &__informasjonsBanner {
             justify-content: center;
-            margin: 2rem 0 0 0;
+            margin-top: 2rem;
         }
 
         &__natur-logo {
