TAG-720 Gjort noen tekstlige endringer for å tydeliggjøre innhold og meningmindre visuelle justeringer

--- a/src/OpprettAvtale/OpprettAvtale.less
+++ b/src/OpprettAvtale/OpprettAvtale.less
@@ -11,6 +11,11 @@
         margin-bottom: 2rem;
     }
 
+    &__eksterntLenkeikon {
+        display: inline-block;
+        margin-left: 0.3rem;
+    }
+
     .nav-veilederpanel {
         margin-bottom: 1rem;
     }
