TAG-455: Infoboks til Deltaker,AG,NAV uten i print versjon (#146)
* info boks til Deltaker,AG,NAv uten i print versjon

* gjør om margin til margin-top enklere å lese

--- a/src/AvtaleSide/AvtaleOversikt.less
+++ b/src/AvtaleSide/AvtaleOversikt.less
@@ -12,7 +12,7 @@
         margin: 2.5rem 0 1.5rem 0;
         display: flex;
         align-items: center;
-        flex-direction: column;   
+        flex-direction: column;
     }
 
     &__natur-tekst {
@@ -21,7 +21,7 @@
         width: 90%;
     }
 
-    &__natur-header{
+    &__natur-header {
         margin-top: 1rem;
     }
 
@@ -32,9 +32,8 @@
     &__topp {
         display: flex;
         justify-content: center;
-        
+
         &--knapp_med_avtaler {
-            
             margin-top: 2rem;
             margin-bottom: 3rem;
         }
@@ -43,7 +42,7 @@
             margin-top: 4rem;
         }
     }
-        
+
     &__header {
         padding: 1rem;
         font-weight: bold;
@@ -79,7 +78,6 @@
     &__statusikon {
         padding-right: 1rem;
     }
-    
 
     @media (min-width: @screen-sm-min) {
         margin: 0 auto;
@@ -88,12 +86,12 @@
         &__topp {
             display: flex;
             justify-content: center;
-            
+
             &--knapp_med_avtaler {
                 margin-top: 3rem;
                 margin-bottom: 3rem;
             }
-    
+
             &--knapp_uten_avtaler {
                 margin-top: 4rem;
             }
@@ -101,6 +99,7 @@
 
         &__informasjonsBanner {
             justify-content: center;
+            margin-top: 2rem;
         }
 
         &__natur-logo {
@@ -112,7 +111,7 @@
             .avtaleoversikt__natur-header {
                 margin-top: 3rem;
             }
-    
+
             .avtaleoversikt__natur-tekst {
                 margin-top: 1rem;
                 text-align: center;
