Ta vekk useEffect, bruk async/await i stedet. Endre avbryt-knapp til tilbake-link med chevron. Sette fast høyde på input-rad slik at det blir mindre "hopping".

--- a/src/OpprettAvtale/OpprettAvtale.less
+++ b/src/OpprettAvtale/OpprettAvtale.less
@@ -29,22 +29,20 @@
     }
 
     &__knappRad {
-        margin-top: 4rem;
-    }
-
-    &__knapp {
-        width: 14rem;
-        align-self: center;
-    }
-
-    &__arbeidsgiver-bedriftNavn {
-        margin-bottom: 1rem;
-    }
-
-    &__knappRad {
         display: flex;
         flex-direction: column;
         align-items: center;
+    }
+
+    &__bedriftNavn {
+        margin-top: 0.5rem;
+    }
+
+    &__knapp {
+        margin-top: 3rem;
+        margin-bottom: 1.5rem;
+        width: 14rem;
+        align-self: center;
     }
 
     &__avbryt {
@@ -64,6 +62,7 @@
         &__input-wrapper {
             display: flex;
             flex-direction: row;
+            height: 6rem;
         }
 
         &__input-wrapper-rad2 {
@@ -81,9 +80,8 @@
             margin-left: 0.5rem;
         }
 
-        &__arbeidsgiver-bedriftNavn {
+        &__bedriftNavn {
             width: 50% - 1rem;
-            margin-bottom: 1rem;
         }
 
         &__bedriftNavnBrreg {
