la knap-med-ikon til å sende med background color, slik at den blir meer gjenbrukt, endre alert type etter avtale status

--- a/src/komponenter/KnappMedIkon/KnappMedIkon.less
+++ b/src/komponenter/KnappMedIkon/KnappMedIkon.less
@@ -17,6 +17,9 @@
         color: @navBla;
         margin-left: 5px;
     }
+    &__backgroundColor {
+        background-color: unset;
+    }
 
     &:hover {
         cursor: pointer;
