Nytt printer-ikon, skjuler print pa mobil

--- a/src/AvtaleSide/GodkjenningSteg/Oppsummering/oppsummering/Oppsummering.less
+++ b/src/AvtaleSide/GodkjenningSteg/Oppsummering/oppsummering/Oppsummering.less
@@ -26,7 +26,7 @@
         display: flex;
         justify-content: space-evenly;
         &:hover {
-            #printer {
+            #↪︎-🌈 {
                 fill: white;
             }
         }
@@ -35,6 +35,11 @@
         }
         @media print {
             display: none;
+        }
+    }
+    @media (max-width: 767px) {
+        &__print-knapp {
+            display: none !important;
         }
     }
 }
