Fjernet important fra css

--- a/src/AvtaleSide/GodkjenningSteg/Oppsummering/oppsummering/Oppsummering.less
+++ b/src/AvtaleSide/GodkjenningSteg/Oppsummering/oppsummering/Oppsummering.less
@@ -39,7 +39,7 @@
     }
     @media (max-width: 767px) {
         &__print-knapp {
-            display: none !important;
+            display: none;
         }
     }
 }
