--- a/src/AvtaleSide/GodkjenningSteg/Oppsummering/oppsummering/Oppsummering.less
+++ b/src/AvtaleSide/GodkjenningSteg/Oppsummering/oppsummering/Oppsummering.less
@@ -26,7 +26,7 @@
         display: flex;
         justify-content: space-evenly;
         &:hover {
-            #↪︎-🌈 {
+            #printerSvg {
                 fill: white;
             }
         }
