--- a/src/AvtaleSide/GodkjenningSteg/Oppsummering/instruks/instruks.less
+++ b/src/AvtaleSide/GodkjenningSteg/Oppsummering/instruks/instruks.less
@@ -4,7 +4,7 @@
     }
     &__instrukslist {
         margin-top: 1rem;
-        padding-left: 1.25rem;
+        margin-left: 1.25rem;
         display: flex;
         flex-direction: row;
         align-items: center;
