la knappen til venstre med mulighet til Flatknapp, endre ikonen

--- a/src/AvtaleSide/AvtaleSide.less
+++ b/src/AvtaleSide/AvtaleSide.less
@@ -59,5 +59,9 @@
             justify-content: center;
             align-items: flex-start;
         }
+        &__avbrytOgDelLenk {
+            display: flex;
+            align-items: center;
+        }
     }
 }
