--- a/src/AvtaleSide/AvbryteAvtalen/AvbryteAvtalen.less
+++ b/src/AvtaleSide/AvbryteAvtalen/AvbryteAvtalen.less
@@ -1,10 +1,14 @@
-.lenkedeling {
-    /*&__ikon {
-    display: inline-block;
-    margin-right: 0.45rem;
-    margin-bottom: -0.1rem;
-  }*/
-
+.avbryteavtalen {
+    margin-right: 1.5rem;
+    &__ikon {
+        display: inline-block;
+        margin-right: 0.45rem;
+        margin-bottom: -0.1rem;
+    }
+    &__lenke {
+        display: flex;
+        align-items: center;
+    }
     @media print {
         display: none;
     }
