--- a/src/AvtaleSide/AvtaleSide.less
+++ b/src/AvtaleSide/AvtaleSide.less
@@ -35,6 +35,9 @@
             display: none;
         }
     }
+    &__varsel {
+        margin-bottom: 1rem;
+    }
 }
 
 @media (min-width: @screen-sm-min) {
