--- a/src/komponenter/Varsel/Varsel.less
+++ b/src/komponenter/Varsel/Varsel.less
@@ -9,7 +9,7 @@
         align-items: center;
 
         &__lukknapp {
-            margin-left: 1rem;
+            margin: -0.3rem -0.3rem -0.3rem -0.3rem;
             flex: none;
         }
     }
