--- a/src/komponenter/Varsel/Varsel.less
+++ b/src/komponenter/Varsel/Varsel.less
@@ -1,16 +1,17 @@
+@import '~nav-frontend-core/less/_variabler';
+
 .varsel {
     .alertstripe__tekst {
         max-width: inherit;
     }
 
-    .varsel__innhold {
+    &__innhold {
         display: flex;
         justify-content: space-between;
         align-items: center;
 
         &__lukknapp {
-            margin: -0.3rem -0.3rem -0.3rem -0.3rem;
-            flex: none;
+            margin: -0.3rem -0.3rem -0.3rem 0.7rem;
         }
     }
 }
