Omstrukturert feilmelding og laget skille på deltaker og arbeidsgiver

--- a/src/AvtaleSide/AvtaleOversikt.less
+++ b/src/AvtaleSide/AvtaleOversikt.less
@@ -4,6 +4,11 @@
     flex-direction: column;
     margin: 2rem 0 3rem 0;
 
+    &__eksterntLenkeikon {
+        display: inline-block;
+        margin-left: 0.3rem;
+    }
+
     &__banner {
         width: 100%;
     }
@@ -16,8 +21,8 @@
     }
 
     &__natur-tekst {
-        text-align: center;
-        margin-top: 1rem;
+        // text-align: center;
+        margin-top: 2rem;
         width: 90%;
     }
 
@@ -113,8 +118,8 @@
             }
 
             .avtaleoversikt__natur-tekst {
-                margin-top: 1rem;
-                text-align: center;
+                margin-top: 2rem;
+                // text-align: center;
             }
         }
     }
