Tag 533 avbryte avtale (#150)
* oppdatering med origin/master

* under arbeid, laget komponent for avbytelse i desktopavtalesiden, i tilleg er det status ble hentet fra backend API, avbruttstatus er default false:avteln er aktiv,

* error med RestService når lagre endringer til avtale

* under arbeid: frontend, får feil i rest servis når avbruttStatus blir added til Avtale i backEnd

* første fungerende scenario, veileeder kan avbryte avtalen som ikke er godkjentavveileder, status vises som avbrutt nå men kan lett endres, neste versjon vil avtalen blir laast, oppheving av avbrutt kan diskuteres

* avtalen blir låst etter at avtalen blir avbrutt

* hindra arbeidsgiver å avbryteavtale

* refresh avtaleside etter avbryting, har et lite problem med refreshing

* fikse statusikon etter merging

* bruk avtalecontext for inkalling av RestService

* justere bekreftelse modal for å være litt mer vennlig gjenbrukes

* la knap-med-ikon til å sende med background color, slik at den blir meer gjenbrukt, endre alert type etter avtale status

* la knappen til venstre med mulighet til Flatknapp, endre ikonen

* gjør knapp til lenke for å folge delelenken, endre ikon og bruke noe mer liknet

* Justere teksten i advarsel modal, bruk classNames for multiclass names i knapp med ikon

* ta vekk tittel for svg fil, ikke relevat tekst

* Småendringer av whitespace o.l.

--- a/src/komponenter/KnappMedIkon/KnappMedIkon.less
+++ b/src/komponenter/KnappMedIkon/KnappMedIkon.less
@@ -6,7 +6,6 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    background-color: unset;
     padding: 0.5rem 1rem;
     // Default usynlig border for at elementene ikke skal forskyve seg på hover
     border: 1px solid transparent;
@@ -16,6 +15,10 @@
     &__label {
         color: @navBla;
         margin-left: 5px;
+    }
+    &__backgroundColor {
+        background-color: unset;
+        color: @navBla;
     }
 
     &:hover {
