Små justeringer CSS

--- a/src/AvtaleSide/AvtaleOversikt.less
+++ b/src/AvtaleSide/AvtaleOversikt.less
@@ -22,17 +22,21 @@
 
     &__ingen-avtaler-tekst-NAV {
         text-align: center;
-        margin-top: 2rem;
+        margin-top: 1rem;
     }
 
     &__ingen-avtaler-tekst {
-        margin-top: 2rem;
+        margin-top: 1rem;
         padding: 1rem;
     }
 
     &__ingen-avtaler-header {
         margin-top: 1rem;
         margin-bottom: 1rem;
+    }
+
+    &__ingen_avtaler {
+        text-align: center;
     }
 
     &__arbeidsgiver-tekst {
@@ -123,10 +127,6 @@
             flex-direction: column;
 
             .avtaleoversikt__ingen-avtaler-header {
-                margin-top: 3rem;
-            }
-
-            .avtaleoversikt__ingen-avtaler-tekst {
                 margin-top: 3rem;
             }
         }
