--- a/src/AvtaleSide/ArbeidsoppgaverSteg/OppgaveKort/OppgaveKort.less
+++ b/src/AvtaleSide/ArbeidsoppgaverSteg/OppgaveKort/OppgaveKort.less
@@ -21,7 +21,7 @@
 
     &__knapper-wrapper {
         display: flex;
-        justify-content: flex-end;
+        justify-content: flex-start;
         padding-top: 0.5rem;
         border-top: 1px solid @navGra20;
     }
