--- a/src/AvtaleSide/MaalSteg/MaalKort/MaalKort.less
+++ b/src/AvtaleSide/MaalSteg/MaalKort/MaalKort.less
@@ -15,7 +15,7 @@
 
     &__knapper-wrapper {
         display: flex;
-        justify-content: flex-end;
+        justify-content: flex-start;
         border-top: 1px solid @navGra20;
         padding-top: 0.5rem;
     }
