lag normal luft mellom stripe og avtaleside for arbeidsgiver

--- a/src/AvtaleSide/AvtaleSide.less
+++ b/src/AvtaleSide/AvtaleSide.less
@@ -30,10 +30,16 @@
         margin-top: 1rem;
         margin-bottom: 1rem;
     }
+
     &__infoboks {
         @media print {
             display: none;
         }
+    }
+
+    &__arbeidsgiver {
+        margin-top: 1rem;
+        margin-bottom: 1rem;
     }
 }
 
@@ -59,6 +65,7 @@
             justify-content: center;
             align-items: flex-start;
         }
+
         &__avbrytOgDelLenk {
             display: flex;
             align-items: center;
