Fikset kommentarer fra Sindre + litt spacing-justeringer

--- a/src/AvtaleSide/AvtaleOversikt.less
+++ b/src/AvtaleSide/AvtaleOversikt.less
@@ -26,7 +26,6 @@
     }
 
     &__ingen-avtaler-tekst {
-        margin-top: 1rem;
         padding: 1rem;
     }
 
@@ -125,10 +124,10 @@
             display: flex;
             align-items: center;
             flex-direction: column;
+        }
 
-            .avtaleoversikt__ingen-avtaler-header {
-                margin-top: 3rem;
-            }
+        &__ingen-avtaler-header {
+            margin-top: 3rem;
         }
     }
 }
