--- a/src/AvtaleSide/AvtaleOversikt.less
+++ b/src/AvtaleSide/AvtaleOversikt.less
@@ -52,9 +52,11 @@
         }
 
         &--knapp_uten_avtaler {
-            margin-top: 4rem;
+            margin-top: 2rem;
         }
     }
+
+    
 
     &__header {
         padding: 1rem;
@@ -100,12 +102,12 @@
             justify-content: center;
 
             &--knapp_med_avtaler {
-                margin-top: 3rem;
-                margin-bottom: 3rem;
+                // margin-top: 3rem;
+                margin-bottom: 2rem;
             }
 
             &--knapp_uten_avtaler {
-                margin-top: 4rem;
+                margin-top: 1rem;
             }
         }
 
@@ -115,6 +117,10 @@
         }
 
         &__arbeidsgiver-tekst {
+            margin-top: 2rem;
+        }
+        
+        &__avtaleliste {
             margin-top: 2rem;
         }
 
