--- a/src/AvtaleSide/AvtaleOversikt.less
+++ b/src/AvtaleSide/AvtaleOversikt.less
@@ -48,15 +48,13 @@
 
         &--knapp_med_avtaler {
             margin-top: 2rem;
-            margin-bottom: 3rem;
+            margin-bottom: 2rem;
         }
 
         &--knapp_uten_avtaler {
             margin-top: 2rem;
         }
     }
-
-    
 
     &__header {
         padding: 1rem;
@@ -93,6 +91,10 @@
         padding-right: 1rem;
     }
 
+    &__avtaleliste {
+        margin-top: 1rem;
+    }
+
     @media (min-width: @screen-sm-min) {
         margin: 0 auto;
         max-width: @screen-sm-min;
@@ -102,7 +104,6 @@
             justify-content: center;
 
             &--knapp_med_avtaler {
-                // margin-top: 3rem;
                 margin-bottom: 2rem;
             }
 
