Lagt til Modal på informasjonsside med video

--- a/src/Informajonsside/informasjonsside.less
+++ b/src/Informajonsside/informasjonsside.less
@@ -44,7 +44,12 @@
         margin: 2rem 0rem 2rem -1rem;
     }
 
-    //  Spesielt for browser:
+    &__lenke {
+        margin-top: 0.5rem;
+        display: block;
+    }
+
+    //  Spesielt for desktop:
     @media (min-width: 765px) {
         .tilbaketiloversikt {
             margin: 4rem 0 1rem 0;
