--- a/src/AvtaleSide/GodkjenningSteg/Oppsummering/instruks/instruks.less
+++ b/src/AvtaleSide/GodkjenningSteg/Oppsummering/instruks/instruks.less
@@ -1,17 +1,24 @@
+@import '~nav-frontend-core/less/_variabler';
 .instruks {
     &__subheader {
-        padding: 0 0 0 1.25rem;
+        padding: 0 0 0 0;
     }
+
     &__instrukslist {
         margin-top: 1rem;
-        margin-left: 1.25rem;
         display: flex;
         flex-direction: row;
         align-items: center;
     }
+
     &__instrukslistsvg {
-        margin-right: 0.75rem;
+        display: none;
+        @media (min-width: @screen-sm-min) {
+            display: block;
+            margin-right: 1rem;
+        }
     }
+
     @media print {
         display: none;
     }
@@ -19,5 +26,21 @@
 .deltakerinstruks {
     @media print {
         display: none;
+    }
+}
+
+@media (min-width: @screen-sm-min) {
+    ​.instruks {
+        &__subheader {
+            padding: 0 0 0 1.25rem;
+        }
+
+        &__instrukslist {
+            margin-top: 1rem;
+            margin-left: 1.25rem;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+        }
     }
 }
