--- a/src/AvtaleSide/TilretteleggingSteg/TilretteleggingSteg.less
+++ b/src/AvtaleSide/TilretteleggingSteg/TilretteleggingSteg.less
@@ -1,6 +1,6 @@
 @import '~nav-frontend-core/less/_variabler';
 
-.tilretteleggingsteg {
+/*.tilretteleggingsteg {
     &__tittel {
         display: none;
         :first-child {
@@ -11,11 +11,11 @@
     &__lagre-knapp {
         margin-top: 1rem;
     }
-}
+}*/
 
 @media (min-width: @screen-sm-min) {
-    .tilretteleggingsteg__tittel {
+    /*.tilretteleggingsteg__tittel {
         display: block;
         margin-bottom: 3rem;
-    }
+    }*/
 }
