--- a/src/komponenter/Innholdsboks/UfyllerBanner/UtfyllerBanner.less
+++ b/src/komponenter/Innholdsboks/UfyllerBanner/UtfyllerBanner.less
@@ -15,7 +15,7 @@
     }
 
     &__begge {
-        background-color: #c6c1be;
+        background-color: #ffe9cc;
     }
 
     &__fyllesUtAvTekst {
