--- a/src/AvtaleSide/AvtaleSide.less
+++ b/src/AvtaleSide/AvtaleSide.less
@@ -24,6 +24,7 @@
         display: flex;
         justify-content: space-between;
         margin-bottom: 1rem;
+        margin-top: 1rem;
     }
 
     .tilbaketiloversikt {
