--- a/src/OpprettAvtale/OpprettAvtale.less
+++ b/src/OpprettAvtale/OpprettAvtale.less
@@ -8,7 +8,8 @@
 
     &__tittel {
         text-align: center;
-        margin-bottom: 2rem;
+        margin-bottom: 2.5rem;
+        margin-top: 2rem;
     }
 
     &__eksterntLenkeikon {
@@ -48,9 +49,34 @@
     &__avbryt {
         margin: 1rem 0;
     }
+
+    &__innholdstittel {
+        margin-bottom: 1.5rem;
+    }
+    &__innholdsboks {
+        margin-bottom: 1rem;
+    }
+}
+
+@media (max-width: @screen-sm-min) {
+    // Mobil
+    .opprett-avtale {
+        &__tiltakstypeWrapper {
+            label {
+                margin-bottom: 1rem;
+            }
+        }
+        &__kandidat-fnr {
+            margin-bottom: 1rem;
+        }
+        &__arbeidsgiver-bedriftNr {
+            margin-bottom: 1rem;
+        }
+    }
 }
 
 @media (min-width: @screen-sm-min) {
+    // Desktop
     .opprett-avtale {
         margin: 0 auto;
         max-width: @screen-sm-min;
@@ -62,7 +88,6 @@
         &__input-wrapper {
             display: flex;
             flex-direction: row;
-            height: 6rem;
         }
 
         &__input-wrapper-rad2 {
@@ -87,6 +112,19 @@
         &__bedriftNavnBrreg {
             margin-top: 0.5rem;
             margin-left: 0.2rem;
+        }
+
+        &__tiltakstypeWrapper {
+            display: flex;
+            flex-direction: row;
+
+            label {
+                flex-grow: 1;
+                margin-right: 0.5rem;
+                &:last-child {
+                    margin-right: 0;
+                }
+            }
         }
     }
 }
