Legge til tekstinnholdet i en annen fil

--- a/src/AvtaleSide/AvtaleStatus/AvtaleStatus.less
+++ b/src/AvtaleSide/AvtaleStatus/AvtaleStatus.less
@@ -33,17 +33,11 @@ display: flex;
 
     &__andreParter {
         margin-top: 1rem;
+        display: flex;
+        justify-content: space-between;
 
         &__ikon {
             margin-left: 2rem;
-        }
-        
-        // &__part1 {
-            
-            // }
-            
-            &__part2 {
-                margin-left: 10rem;
-            }   
-        }
+        } 
+    }
 }
