kan se tidligere versjoner av avtale som ble opprettet, under arbeid, uklar design

--- a/src/AvtaleSide/GodkjenningSteg/VersjonKontroll/VersjonTabs.less
+++ b/src/AvtaleSide/GodkjenningSteg/VersjonKontroll/VersjonTabs.less
@@ -27,4 +27,8 @@
         text-overflow: ellipsis;
         white-space: nowrap;
     }
+    &__knapp {
+        white-space: normal;
+        word-wrap: break-word;
+    }
 }
