--- a/src/AvtaleSide/AvtaleSide.less
+++ b/src/AvtaleSide/AvtaleSide.less
@@ -13,6 +13,7 @@
 
     &__banner {
         margin-bottom: 1rem;
+        margin-top: 1rem;
     }
 
     &__lenkerlinje {
@@ -40,7 +41,7 @@
     }
 
     &__varsel {
-        margin-bottom: 1rem;
+        margin-top: 1rem;
     }
 
     &__svak {
