fjere unødvendige alerter, bruke statusikon, fjerne unødvendige.

--- a/src/AvtaleSide/AvtaleStatus/AvtaleStatus.less
+++ b/src/AvtaleSide/AvtaleStatus/AvtaleStatus.less
@@ -12,9 +12,9 @@
         justify-content: center;
         margin-top: -3.5rem;
 
-        &__resize {
-            width: 50px;
-            height: 50px;
+        &__justerStorrelse {
+            width: 3.125rem;
+            height: 3.125rem;
         }
     }
 
@@ -23,7 +23,7 @@
     }
 
     &__header {
-        margin-top: 2rem;
+        margin-top: 1rem !important;
         margin-bottom: 1rem;
     }
 
