legge til style for mobil versjon

--- a/src/AvtaleSide/AvtaleStatus/AvtaleStatus.less
+++ b/src/AvtaleSide/AvtaleStatus/AvtaleStatus.less
@@ -44,3 +44,24 @@
         }
     }
 }
+@media (max-width: @screen-sm-min) {
+    // Mobil
+    .avtalestatus {
+        &__innholdsboks {
+            margin-bottom: 5rem;
+        }
+        &__hovedIkon {
+            display: flex;
+            justify-content: flex-start;
+            margin-top: 0rem;
+            &__justerStorrelse {
+                width: 2rem;
+                height: 2rem;
+            }
+        }
+        &__header {
+            margin-top: 0rem;
+            margin-bottom: 1rem;
+        }
+    }
+}
