justere for mobil versjon

--- a/src/AvtaleSide/AvtaleStatus/AvtaleStatus.less
+++ b/src/AvtaleSide/AvtaleStatus/AvtaleStatus.less
@@ -48,12 +48,12 @@
     // Mobil
     .avtalestatus {
         &__innholdsboks {
-            margin-bottom: 5rem;
+            margin-bottom: 3rem;
         }
         &__hovedIkon {
             display: flex;
             justify-content: flex-start;
-            margin-top: 0rem;
+            margin-top: -1rem;
             &__justerStorrelse {
                 width: 2rem;
                 height: 2rem;
@@ -62,6 +62,20 @@
         &__header {
             margin-top: 0rem;
             margin-bottom: 1rem;
+        }
+        &__andreParter {
+            margin-top: 1rem;
+            display: block;
+            // justify-content: space-between;
+
+            &__ikon {
+                margin-left: 2rem;
+            }
+            &__begge {
+                display: flex;
+                justify-content: space-between;
+                margin-bottom: 1rem;
+            }
         }
     }
 }
