--- a/src/AvtaleSide/AvtaleSide.less
+++ b/src/AvtaleSide/AvtaleSide.less
@@ -5,6 +5,7 @@
     background-color: @grayBackground;
     padding-left: 1rem;
     padding-right: 1rem;
+    margin-bottom: 3rem;
 
     &__ekspanderbart-panel {
         margin-top: 0.5rem;
