--- a/src/AvtaleSide/AvtaleStatus/AvtaleStatus.less
+++ b/src/AvtaleSide/AvtaleStatus/AvtaleStatus.less
@@ -49,25 +49,34 @@
     // Mobil
     .avtalestatus {
         &__innholdsboks {
-            margin-bottom: 3rem;
+            // margin-bottom: 3rem;
+            border-bottom: 4px solid #e9e7e7;
+            border-radius: 0;
         }
-        &__hovedIkon {
+        &__hovedIkonMobil {
             display: flex;
-            justify-content: flex-start;
-            margin-top: -1rem;
+            justify-content: space-between;
+    
+
             &__justerStorrelse {
-                width: 2rem;
-                height: 2rem;
+                width: 1.5rem;
+                height: 1.5rem;
+                margin-top: 1rem;
             }
         }
+
+        &__infotekst {
+            border-bottom: 0;
+        }
+        
         &__header {
             margin-top: 0rem;
             margin-bottom: 1rem;
+            font-size: large;
         }
         &__andreParter {
-            margin-top: 1rem;
+            margin-top: 2rem;
             display: block;
-            // justify-content: space-between;
 
             &__ikon {
                 margin-left: 2rem;
@@ -76,6 +85,7 @@
                 display: flex;
                 justify-content: space-between;
                 margin-bottom: 1rem;
+                margin-right: 0;
             }
         }
     }
