TAG-972 Rydde i alignments / CSS

--- a/src/AvtaleSide/steg/GodkjenningSteg/Oppsummering/Stegoppsummering/Stegoppsummering.less
+++ b/src/AvtaleSide/steg/GodkjenningSteg/Oppsummering/Stegoppsummering/Stegoppsummering.less
@@ -11,9 +11,7 @@
         margin-bottom: 0.5rem;
         padding-bottom: 0.5rem;
     }
-
-    &__tittel {
-        padding-left: 0.5rem;
-        width: 100%;
+    svg {
+        margin-right: 0.5rem;
     }
 }
