Forbedret tekst etc

--- a/src/AvtaleOversikt/IngenAvtaler/IngenAvtalerArbeidsgiver.less
+++ b/src/AvtaleOversikt/IngenAvtaler/IngenAvtalerArbeidsgiver.less
@@ -1,9 +1,26 @@
 @import '~nav-frontend-core/less/_variabler';
 
 .ingenAvtalerArbeidsgiver {
-    &__header {
+    &__container {
+        padding: 0 3rem;
+    }
+    &__headerIkon {
+        margin-right: 1rem;
+        margin-top: 0.2rem;
+    }
+
+    &__headerContainer {
+        margin-bottom: 3rem;
         margin-top: 2rem;
-        margin-bottom: 2rem;
-        text-align: center;
+        display: flex;
+        justify-content: center;
+    }
+
+    &__rolleinfo {
+        margin-top: 2rem;
+    }
+
+    &__rolleinfo2 {
+        margin-top: 1rem;
     }
 }
