--- a/src/InnloggingBoundary/Innloggingsside.less
+++ b/src/InnloggingBoundary/Innloggingsside.less
@@ -21,6 +21,13 @@
         margin-top: 4rem;
         margin-bottom: 3rem;
     }
+    &__loginKnapper {
+        display: flex;
+        justify-content: center;
+        button {
+            margin: 0rem 0.5rem 0 0.5rem;
+        }
+    }
 }
 
 .wrapper {
