--- a/src/AvtaleSide/steg/ArbeidsoppgaverSteg/OpprettOppgave/OpprettOppgave.less
+++ b/src/AvtaleSide/steg/ArbeidsoppgaverSteg/OpprettOppgave/OpprettOppgave.less
@@ -1,11 +1,8 @@
 @import '~nav-frontend-core/less/_variabler';
 
 .opprett-oppgave {
-    &__beskrivelse {
-        margin-bottom: 2rem;
-    }
-
     &__knapp {
+        margin-top: 2rem;
         margin-bottom: 0.5rem;
         white-space: unset;
     }
