--- a/src/InnloggingBoundary/Innloggingsside.less
+++ b/src/InnloggingBoundary/Innloggingsside.less
@@ -5,10 +5,6 @@
     flex-direction: column;
     display: flex;
 
-    &__logginnKnapp {
-        margin: 3rem 0rem 2rem 0rem;
-    }
-
     &__infotekst {
         text-align: center;
     }
@@ -21,11 +17,32 @@
         margin-top: 4rem;
         margin-bottom: 3rem;
     }
-    &__loginKnapper {
-        display: flex;
-        justify-content: center;
-        button {
-            margin: 0rem 0.5rem 0 0.5rem;
+
+    @media (min-width: @screen-sm-min) {
+        // Desktop only
+        &__loginKnapper {
+            display: flex;
+            justify-content: center;
+            button {
+                margin: 0rem 0.5rem 0 0.5rem;
+            }
+        }
+    }
+
+    @media (max-width: @screen-sm-min) {
+        // Mobile only
+        &__loginKnapper {
+            text-align: center;
+            button {
+                margin: 0.5rem 0;
+            }
+        }
+        &__infotekst {
+            padding: 1rem;
+        }
+
+        &__tittel {
+            margin-top: 3rem;
         }
     }
 }
