fikse style og luft i modal

--- a/src/komponenter/modal/VersjonModal.less
+++ b/src/komponenter/modal/VersjonModal.less
@@ -1,13 +1,14 @@
 @import '~nav-frontend-core/less/_variabler';
 
-.vesjon {
+.versjon {
     &__modal {
-        max-width: 50rem;
+        max-width: 80%;
         padding: 4rem 1.5rem;
     }
 
     &__innholdstittel {
-        margin: 1rem 0 2rem 0;
+        margin-top: -1rem !important;
+        margin-bottom: 1rem !important;
     }
 }
 
@@ -15,6 +16,12 @@
     .versjon {
         &__modal {
             padding: 4rem 3rem;
+            width: 80% !important;
+            max-width: 80% !important;
+        }
+        &__innholdstittel {
+            margin-top: 1rem;
+            margin-bottom: 2rem !important;
         }
     }
 }
