--- a/src/AvtaleSide/steg/GodkjenningSteg/Versjonering/Versjoner.less
+++ b/src/AvtaleSide/steg/GodkjenningSteg/Versjonering/Versjoner.less
@@ -11,6 +11,9 @@
         margin-bottom: 0.5rem;
         padding-bottom: 0.5rem;
     }
+    &__liste {
+        margin-top: 1.5rem;
+    }
     &__rad {
         margin: 0 0.25rem;
         display: flex;
@@ -21,6 +24,7 @@
         position: relative;
     }
     &__dato {
+        justify-content: flex-end;
         margin-right: 1.5rem;
     }
     svg {
