--- a/src/AvtaleOversikt/IngenAvtaler/IngenAvtalerArbeidsgiver.less
+++ b/src/AvtaleOversikt/IngenAvtaler/IngenAvtalerArbeidsgiver.less
@@ -3,7 +3,6 @@
 .ingenAvtalerArbeidsgiver {
     &__headerIkon {
         margin-right: 1rem;
-        margin-top: 0.2rem;
     }
 
     &__headerContainer {
@@ -20,7 +19,7 @@
     @media (min-width: @screen-sm-min) {
         // Desktop only
         &__container {
-            padding: 0 3rem;
+            padding: 0 3rem 3rem 3rem;
         }
     }
 }
