splitt versjoner komponent til 3 små komponenter, mer rydde

--- a/src/AvtaleSide/steg/GodkjenningSteg/Versjonering/TidligereVersjoner.less
+++ b/src/AvtaleSide/steg/GodkjenningSteg/Versjonering/TidligereVersjoner.less
@@ -1,6 +1,6 @@
 @import '~nav-frontend-core/less/_variabler';
 
-.versjoner {
+.tidligereVersjoner {
     margin-bottom: 2.5rem;
 
     &__header {
@@ -29,8 +29,5 @@
     }
     svg {
         margin-right: 0.5rem;
-    }
-    &__laasoppknapp {
-        width: 100%;
     }
 }
